--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* global css end */
+/* global css end--------------------------------------------------- */
 * {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
